Finish actions+animations after the button was clicked

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="poll">
-        <div class="poll-head">
-            <p>อยากให้ CryptoSiam เสนอข่าวประเภทใด?</p>
+        <div id="poll-head">
+            <p>อยากให้ CryptoSiam เสนอข่าวอะไรมากที่สุด?</p>
         </div>
         <div id="poll-body">
             
