All functions work as expected, time for bed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="poll">
         <div id="poll-head">
-            <p>อยากให้ CryptoSiam เสนอข่าวอะไรมากที่สุด?</p>
+            <p>อยากให้ CryptoSiam นำเสนอข่าวอะไรมากที่สุด?</p>
         </div>
         <div id="poll-body">
             
